--- a/vignettes/getting_started.Rmd
+++ b/vignettes/getting_started.Rmd
@@ -29,19 +29,14 @@ library(vvtableau)
 To begin, you need to authenticate and establish a connection to Tableau Server. Use the authenticate_server() function to provide the server URL, your username, and password. Here's an example:
 
 ```{r authenticate}
-authenticate_server(
+tableau <- authenticate_server(
   server = "https://tableau.server.com",
   username = "your_username",
   password = "your_password"
 )
 ```
 
-When authentication has succeeded the following system variables will be set: 
-- `TABLEAU_API_TOKEN`
-- `TABLEAU_API_USER_ID`
-- `TABLEAU_API_SITE_ID`
-
-These variables are required in order to use the Server methods.
+When authentication has succeeded the `tableau` object can be passed to the Tableau REST API methods.
 
 # Retrieving Server Information
 
@@ -50,9 +45,7 @@ Once connected, you can retrieve various information about Tableau Server using 
 
 ```{r jobs}
 get_server_jobs(
-  base_url = "https://tableau.server.com",
-  site_id = Sys.getenv("TABLEAU_API_SITE_ID"),
-  token = Sys.getenv("TABLEAU_API_TOKEN"),
+  tableau,
   page_size = 300
 )
 ```
